Fix issue with rendering options on mobile (#155)
* Fix options rendering issue on mobile

fixes https://github.com/proginosko/LeechBlockNG/issues/127

* realign text to the left in tabs element

--- a/options.css
+++ b/options.css
@@ -84,14 +84,13 @@ body {
 	width: 408px;
 }
 
-#form-container {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+#form {
+  text-align: center;
 }
 
 #tabs {
 	display: inline-block;
+	text-align: left;
 }
 
 #paneAbout {
